<resources>
    <string name="app_name">BuzzinBees</string>

    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>

    <!-- Page Names !-->
    <string name="title_home">Home</string>
    <string name="title_options">Options</string>
    <string name="title_musicLibrary_allSongs">Songs</string>
    <string name="title_musicLibrary_allPlaylists">Playlists</string>
    <string name="title_musicLibrary_addPlaylist">ADD NEW PLAYLIST</string>
    <string name="title_musicLibrary_editPlaylist">EDIT PLAYLIST</string>
    <string name="title_musicLibrary_allAlbums">Albums</string>
    <string name="title_musicLibrary_allArtists">Artists</string>
    <string name="title_visualizer">Visualizer</string>
    <string name="title_bluetooth">Bluetooth Setup</string>

    <!-- Constants-->
    <string name="name_songLibraryPlaylist">All Songs</string>
    <string name="name_defaultPlaylist">💛 Favorites</string>

    <!--Variable/Placeholder Strings!-->
    <string name="var_RecentPlayedQueue">Music Queue</string>
    <string name="var_VersionNum">Version 0.00.1</string>
    <string name="var_SearchBleDevices">Search</string>
    <string name="var_ConnectBleDevice">Connect</string>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
